src/expreval.output
Grammar

    0 $accept: start $end

    1 start: %empty
    2      | exp ';'

    3 exp: NUM
    4    | VAR
    5    | VAR like STRING
    6    | VAR '=' NUM
    7    | VAR "==" NUM
    8    | VAR '=' STRING
    9    | VAR "==" STRING
   10    | VAR "!=" NUM
   11    | VAR "<>" NUM
   12    | VAR "!=" STRING
   13    | VAR "<>" STRING
   14    | exp "||" exp
   15    | exp "&&" exp
   16    | VAR '>' exp
   17    | VAR '<' exp
   18    | VAR ">=" exp
   19    | VAR "<=" exp
   20    | exp '+' exp
   21    | exp '-' exp
   22    | exp '*' exp
   23    | exp '/' exp
   24    | '(' exp ')'
   25    | '-' exp
   26    | '!' exp

   27 like: "like"
   28     | "ilike"
   29     | "not" "like"
   30     | "not" "ilike"


Terminals, with rules where they appear

$end (0) 0
'!' (33) 26
'(' (40) 24
')' (41) 24
'*' (42) 22
'+' (43) 20
'-' (45) 21 25
'/' (47) 23
';' (59) 2
'<' (60) 17
'=' (61) 6 8
'>' (62) 16
error (256)
NUM (258) 3 6 7 10 11
STRING (259) 5 8 9 12 13
VAR (260) 4 5 6 7 8 9 10 11 12 13 16 17 18 19
"||" (261) 14
"&&" (262) 15
"==" (263) 7 9
"!=" (264) 10 12
"<>" (265) 11 13
"<=" (266) 19
">=" (267) 18
"like" (268) 27 29
"ilike" (269) 28 30
"not" (270) 29 30
NEG (271)


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
start (29)
    on left: 1 2, on right: 0
exp (30)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26, on right: 2 14 15 16 17 18 19 20 21 22 23 24 25 26
like (31)
    on left: 27 28 29 30, on right: 5


State 0

    0 $accept: . start $end

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    $default  reduce using rule 1 (start)

    start  go to state 6
    exp    go to state 7


State 1

    3 exp: NUM .

    $default  reduce using rule 3 (exp)


State 2

    4 exp: VAR .
    5    | VAR . like STRING
    6    | VAR . '=' NUM
    7    | VAR . "==" NUM
    8    | VAR . '=' STRING
    9    | VAR . "==" STRING
   10    | VAR . "!=" NUM
   11    | VAR . "<>" NUM
   12    | VAR . "!=" STRING
   13    | VAR . "<>" STRING
   16    | VAR . '>' exp
   17    | VAR . '<' exp
   18    | VAR . ">=" exp
   19    | VAR . "<=" exp

    "=="     shift, and go to state 8
    "!="     shift, and go to state 9
    "<>"     shift, and go to state 10
    "<="     shift, and go to state 11
    ">="     shift, and go to state 12
    "like"   shift, and go to state 13
    "ilike"  shift, and go to state 14
    "not"    shift, and go to state 15
    '='      shift, and go to state 16
    '>'      shift, and go to state 17
    '<'      shift, and go to state 18

    $default  reduce using rule 4 (exp)

    like  go to state 19


State 3

   25 exp: '-' . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 20


State 4

   26 exp: '!' . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 21


State 5

   24 exp: '(' . exp ')'

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 22


State 6

    0 $accept: start . $end

    $end  shift, and go to state 23


State 7

    2 start: exp . ';'
   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp

    "||"  shift, and go to state 24
    "&&"  shift, and go to state 25
    '-'   shift, and go to state 26
    '+'   shift, and go to state 27
    '*'   shift, and go to state 28
    '/'   shift, and go to state 29
    ';'   shift, and go to state 30


State 8

    7 exp: VAR "==" . NUM
    9    | VAR "==" . STRING

    NUM     shift, and go to state 31
    STRING  shift, and go to state 32


State 9

   10 exp: VAR "!=" . NUM
   12    | VAR "!=" . STRING

    NUM     shift, and go to state 33
    STRING  shift, and go to state 34


State 10

   11 exp: VAR "<>" . NUM
   13    | VAR "<>" . STRING

    NUM     shift, and go to state 35
    STRING  shift, and go to state 36


State 11

   19 exp: VAR "<=" . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 37


State 12

   18 exp: VAR ">=" . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 38


State 13

   27 like: "like" .

    $default  reduce using rule 27 (like)


State 14

   28 like: "ilike" .

    $default  reduce using rule 28 (like)


State 15

   29 like: "not" . "like"
   30     | "not" . "ilike"

    "like"   shift, and go to state 39
    "ilike"  shift, and go to state 40


State 16

    6 exp: VAR '=' . NUM
    8    | VAR '=' . STRING

    NUM     shift, and go to state 41
    STRING  shift, and go to state 42


State 17

   16 exp: VAR '>' . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 43


State 18

   17 exp: VAR '<' . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 44


State 19

    5 exp: VAR like . STRING

    STRING  shift, and go to state 45


State 20

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp
   25    | '-' exp .

    $default  reduce using rule 25 (exp)


State 21

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp
   26    | '!' exp .

    '-'  shift, and go to state 26
    '+'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 26 (exp)


State 22

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp
   24    | '(' exp . ')'

    "||"  shift, and go to state 24
    "&&"  shift, and go to state 25
    '-'   shift, and go to state 26
    '+'   shift, and go to state 27
    '*'   shift, and go to state 28
    '/'   shift, and go to state 29
    ')'   shift, and go to state 46


State 23

    0 $accept: start $end .

    $default  accept


State 24

   14 exp: exp "||" . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 47


State 25

   15 exp: exp "&&" . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 48


State 26

   21 exp: exp '-' . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 49


State 27

   20 exp: exp '+' . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 50


State 28

   22 exp: exp '*' . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 51


State 29

   23 exp: exp '/' . exp

    NUM  shift, and go to state 1
    VAR  shift, and go to state 2
    '-'  shift, and go to state 3
    '!'  shift, and go to state 4
    '('  shift, and go to state 5

    exp  go to state 52


State 30

    2 start: exp ';' .

    $default  reduce using rule 2 (start)


State 31

    7 exp: VAR "==" NUM .

    $default  reduce using rule 7 (exp)


State 32

    9 exp: VAR "==" STRING .

    $default  reduce using rule 9 (exp)


State 33

   10 exp: VAR "!=" NUM .

    $default  reduce using rule 10 (exp)


State 34

   12 exp: VAR "!=" STRING .

    $default  reduce using rule 12 (exp)


State 35

   11 exp: VAR "<>" NUM .

    $default  reduce using rule 11 (exp)


State 36

   13 exp: VAR "<>" STRING .

    $default  reduce using rule 13 (exp)


State 37

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   19    | VAR "<=" exp .
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp

    '-'  shift, and go to state 26
    '+'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 19 (exp)


State 38

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   18    | VAR ">=" exp .
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp

    '-'  shift, and go to state 26
    '+'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 18 (exp)


State 39

   29 like: "not" "like" .

    $default  reduce using rule 29 (like)


State 40

   30 like: "not" "ilike" .

    $default  reduce using rule 30 (like)


State 41

    6 exp: VAR '=' NUM .

    $default  reduce using rule 6 (exp)


State 42

    8 exp: VAR '=' STRING .

    $default  reduce using rule 8 (exp)


State 43

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   16    | VAR '>' exp .
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp

    '-'  shift, and go to state 26
    '+'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 16 (exp)


State 44

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   17    | VAR '<' exp .
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp

    '-'  shift, and go to state 26
    '+'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 17 (exp)


State 45

    5 exp: VAR like STRING .

    $default  reduce using rule 5 (exp)


State 46

   24 exp: '(' exp ')' .

    $default  reduce using rule 24 (exp)


State 47

   14 exp: exp . "||" exp
   14    | exp "||" exp .
   15    | exp . "&&" exp
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp

    '-'  shift, and go to state 26
    '+'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 14 (exp)


State 48

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   15    | exp "&&" exp .
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp

    '-'  shift, and go to state 26
    '+'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 15 (exp)


State 49

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   20    | exp . '+' exp
   21    | exp . '-' exp
   21    | exp '-' exp .
   22    | exp . '*' exp
   23    | exp . '/' exp

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 21 (exp)


State 50

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   20    | exp . '+' exp
   20    | exp '+' exp .
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 20 (exp)


State 51

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   22    | exp '*' exp .
   23    | exp . '/' exp

    $default  reduce using rule 22 (exp)


State 52

   14 exp: exp . "||" exp
   15    | exp . "&&" exp
   20    | exp . '+' exp
   21    | exp . '-' exp
   22    | exp . '*' exp
   23    | exp . '/' exp
   23    | exp '/' exp .

    $default  reduce using rule 23 (exp)
